<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensors</string>
    <string name="title_section1">Location</string>
    <string name="title_section2">Track location</string>
    <string name="title_section3">Accelometer speak</string>
    <string name="title_section4">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="provider">Provider: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="providers">Enabled providers: </string>
    <string name="btLocationText">Get location data </string>


    <string name="wellcome">Wellcome to application</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="faceDown">Face down</string>


</resources>
